# PRISM-Rec

./: .claudeignore  .gitignore  ANALYSIS_AND_SOLUTIONS.md  README.md  pyproject.toml  training_analysis_epoch400.md
data/: add_popularity_score.py  analyze_item_embeddings.py  analyze_tag_hierarchy_repetition.py  process.py  process_amazon.py  process_readme.md
prism/embedding_analysis_beauty/: metrics.json
scripts/ActionPiece/: train_ap_beauty.sh  train_ap_cds.sh  train_ap_sports.sh  train_ap_toys.sh  train_recommender.sh
scripts/CollisionTest/: collision_analysis.py  data_split.py  plot_collision_analysis.py
scripts/EAGER/: train_hkm_beauty.sh  train_hkm_cds.sh  train_hkm_sports.sh  train_hkm_toys.sh  train_recommender.sh
scripts/LETTER/: train_letter_beauty.sh  train_letter_cds.sh  train_letter_sports.sh  train_letter_toys.sh  train_recommender.sh
scripts/TIGER/: train_recommender.sh  train_tiger_beauty.sh  train_tiger_cds.sh  train_tiger_sports.sh  train_tiger_toys.sh
scripts/data/: process_beauty_data.sh  process_cds_data.sh  process_sports_data.sh  process_toys_data.sh
scripts/hidvae/: train_hidvae_beauty.sh  train_lightgcn.sh  train_recommender.sh  train_rqvae_beauty.sh  train_tiger.sh
scripts/lightGCN/: train_lightGCN_beauty.sh  train_lightGCN_cds.sh  train_lightGCN_sports.sh  train_lightGCN_toys.sh
scripts/prism/: analyze_embedding_geometry.py  analyze_saco_sampling.py  batch_stage1.py  compare_longtail.py  hparam_sensitivity_stage1.sh  hparam_sensitivity_stage1Rec.sh  longtail_eval.sh  plot_efficiency_comparison.py  plot_rqvae_ablation_distance.py  prototype_reliability_gate.py  run_rqvae_ablation.sh  run_stage1.sh  run_stage1_old.sh  run_stage2.sh  test_decoupled_mechanisms.py  test_pa_scl_final.py  test_pa_scl_loss.py  test_pa_scl_prior.py  train_prism_beauty.sh  train_prism_cds.sh  train_prism_sports.sh  train_prism_toys.sh  train_recommender.sh  verify_modality_reliability.py  visualize_codebook_comparison.py  visualize_hyperpara.py
scripts/rqkmeans/: rqkmeans_beauty.sh
scripts/tiger/: sleep_run.sh  train_recommender.sh  train_rqvae_beauty.sh
src/common/: __init__.py  visualization.py
src/sid_tokenizer/: __init__.py
tests/: test_moe_fusion.py
tmp/: compute_teacher.py  diagnose_rgcp_gradients.py  prism_hcmr_gradient_smoke.py  prism_hcmr_real_batch_smoke.py  smoke_test_disentangled.py  test_refinement.py
(+246 files in other folders)
