[project]
name = "sid-gr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "sentencepiece>=0.2.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "sentence-transformers>=5.1.1",
    "pyarrow>=21.0.0",
    "fastparquet>=2024.11.0",
    "modelscope>=1.30.0",
    "torch-geometric>=2.7.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "faiss-gpu>=1.7.2",
    "numpy>=1.26.0,<2.0",
    "ray>=1.13.0,<=2.6.3",
    "colorlog>=4.7.2",
    "colorama>=0.4.4",
    "tensorboard>=2.5.0",
    "tabulate>=0.8.10",
    "plotly>=4.0.0",
    "texttable>=0.9.0",
    "psutil>=5.9.0",
    "thop>=0.1.1.post2207130030",
    "peft>=0.18.0",
    "llama-stack>=0.2.11",
    "socksio>=1.0.0",
    "httpx>=0.28.1",
    "umap-learn>=0.5.9.post2",
    "scienceplots>=2.2.0",
]

[[tool.uv.index]]
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# default = true

name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
